syntax = "proto3";

package config;

import "repos/protobuf/gogoproto/gogo.proto";

import "ext.proto";

enum AuthMode {
    option (gogoproto.goproto_enum_stringer) = false;

    AUTH_MODE_STATIC = 0;
    AUTH_MODE_LDAP   = 1 [(ext.enumgoname) = "AuthModeLDAP"];
}
