syntax = "proto3";

package config;

import "lib/config/ldaptransport.proto";

import "ext.proto";


message LDAPConfiguration {
    string        address              = 1 [(ext.xml) = "address,omitempty"];
    string        bind_dn              = 2 [(ext.goname) = "BindDN", (ext.xml) = "bindDN,omitempty", (ext.json) = "bindDN"];
    LDAPTransport transport            = 3 [(ext.xml) = "transport,omitempty"];
    bool          insecure_skip_verify = 4 [(ext.xml) = "insecureSkipVerify,omitempty", (ext.default) = "false"];
    string        search_base_dn       = 5 [(ext.goname) = "SearchBaseDN", (ext.xml) = "searchBaseDN,omitempty", (ext.json) = "searchBaseDN"];
    string        search_filter        = 6 [(ext.xml) = "searchFilter,omitempty"];
}
