syntax = "proto3";

package config;

import "repos/protobuf/gogoproto/gogo.proto";

import "ext.proto";

enum LDAPTransport {
    option (gogoproto.goproto_enum_stringer) = false;

    LDAP_TRANSPORT_PLAIN     = 0 [(ext.enumgoname) = "LDAPTransportPlain"];
    LDAP_TRANSPORT_TLS       = 2 [(ext.enumgoname) = "LDAPTransportTLS"];
    LDAP_TRANSPORT_START_TLS = 3 [(ext.enumgoname) = "LDAPTransportStartTLS"];
}
